--- a/ImageProcessingApp/Views/MainWindow.xaml
+++ b/ImageProcessingApp/Views/MainWindow.xaml
@@ -33,8 +33,8 @@
             <Button Grid.Column="0" Grid.Row="0" Content="Open" Margin="5" Command="{Binding LoadImageCommand}"/>
             <Button Grid.Column="0" Grid.Row="1" Content="Open Default" Margin="5" Command="{Binding LoadDefaultImageCommand}"/>
             <Button Grid.Column="0" Grid.Row="2" Content="Save" Margin="5" Command="{Binding SaveImageCommand}"/>
-            <Button Grid.Column="0" Grid.Row="3" Content="Convert RGB Values" Margin="5" Command=""/>
-            <Button Grid.Column="0" Grid.Row="4" Content="Convert RGB Values Async" Margin="5" Command=""/>
+            <Button Grid.Column="0" Grid.Row="3" Content="Convert RGB Values" Margin="5" Command="{Binding ConvertRGBCommand}"/>
+            <Button Grid.Column="0" Grid.Row="4" Content="Convert RGB Values Async" Margin="5" Command="{Binding ConvertRGBAsyncCommand}"/>
             <Button Grid.Column="0" Grid.Row="5" Content="Grayscale" Margin="5" Command=""/>
             <Button Grid.Column="0" Grid.Row="6" Content="Grayscale Async" Margin="5" Command=""/>
             <Button Grid.Column="0" Grid.Row="7" Content="Grayscale Cpp" Margin="5" Command=""/>
@@ -55,7 +55,7 @@
                 Height="Auto" 
                 Width="Auto" Margin="5">
             <Image x:Name="imageAfter" 
-                   Source="" 
+                   Source="{Binding ImageResult}"
                    HorizontalAlignment="Stretch" 
                    VerticalAlignment="Stretch" 
                    Stretch="Fill"/>
