Add C++ DLL For Grayscale

--- a/ImageProcessingApp/Views/MainWindow.xaml
+++ b/ImageProcessingApp/Views/MainWindow.xaml
@@ -37,7 +37,7 @@
             <Button Grid.Column="0" Grid.Row="4" Content="Convert RGB Values Async" Margin="5" Command="{Binding ConvertRGBAsyncCommand}"/>
             <Button Grid.Column="0" Grid.Row="5" Content="Grayscale" Margin="5" Command="{Binding GrayscaleCommand}"/>
             <Button Grid.Column="0" Grid.Row="6" Content="Grayscale Async" Margin="5" Command="{Binding GrayscaleAsyncCommand}"/>
-            <Button Grid.Column="0" Grid.Row="7" Content="Grayscale Cpp" Margin="5" Command=""/>
+            <Button Grid.Column="0" Grid.Row="7" Content="Grayscale Cpp" Margin="5" Command="{Binding GrayscaleCppCommand}"/>
         </Grid>
 
         <Border Grid.Row="0" Grid.Column="1" 
